--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 style="font-family: 'Poppins', sans-serif; font-size: 48px; margin-bottom: 0px;">Faça sua
             doação para Uuyzs!! 💚</h1>
         <h3 style="font-family: 'Poppins', sans-serif; opacity: 0.7;">Infelizmente, somente as
-            notificações<br>
+            doações<br>
             via PicPay são notificadas na live.*
         </h3>
     </section>
