--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
             doação para Uuyzs!! 💚</h1>
         <h3 style="font-family: 'Poppins', sans-serif; opacity: 0.7;">Infelizmente, somente as
             doações<br>
-            via PicPay são notificadas na live.*
+            via PayPal e PicPay são notificadas na live.*
         </h3>
     </section>
 
     <section style="display: flex; justify-content: center;" class="secImages">
-        <div class="image">
+        <div>
             <a href="https://picpay.me/Uuyzs">
                 <img class="image" src="./images/PicPay-donation.png"></a>
         </div>
-        <div>
+        <div class="image">
             <a href="" class="btn" data-clipboard-text="dbed456c-fb89-4670-b3a5-82d0f47c8e77">
                 <img class="image" src="./images/Pix-donation.png"></a>
+        </div>
+        <div>
+            <a href="https://streamlabs.com/uuyzs/tip">
+                <img class="image" src="./images/PayPal-donation.png"></a>
         </div>
     </section>
 </body>
@@ -68,7 +72,9 @@
     }
 
     .image {
-        padding-right: 42px;
+        padding-right: 10px;
+        padding-left: 10px;
+        
     }
 
     @media screen and (max-width: 940px) {
