--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
     }
 
     .image {
+        height: auto;
+        max-width: 90%;
         padding-right: 10px;
         padding-left: 10px;
-        
+
     }
 
     @media screen and (max-width: 940px) {
@@ -98,7 +100,8 @@
             height: auto;
             max-width: 100%;
             padding-right: 0px;
-            
+            padding-left: 0px;
+
         }
     }
 </style>
