--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             doação para Uuyzs!! 💚</h1>
         <h3 style="font-family: 'Poppins', sans-serif; opacity: 0.7;">Infelizmente, somente as
             doações<br>
-            via PayPal e PicPay são notificadas na live.*
+            via PayPal e Tipa.ai são notificadas na live.*
         </h3>
     </section>
 
     <section style="display: flex; justify-content: center;" class="secImages">
         <div>
-            <a href="https://picpay.me/Uuyzs">
-                <img class="image" src="./images/PicPay-donation.png"></a>
+            <a href="https://tipa.ai/Uuyzs">
+                <img class="image" src="./images/TipaAi-donation.png"></a>
         </div>
         <div class="image">
             <a href="" class="btn" data-clipboard-text="dbed456c-fb89-4670-b3a5-82d0f47c8e77">
